--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
+authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>",
+           "tupsu <tupsuosu@gmail.com>"]
 edition = "2018"
 name = "memoparsa"
 version = "0.1.0"
 [dependencies]
+clap = "2.33.0"
 chrono = "*"
 chrono-tz = "*"
 env_logger = "0.6.1"
