--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ clap = "2.33.0"
 chrono = "*"
 chrono-tz = "*"
 env_logger = "0.6.1"
+exitcode = "1.1.2"
 ics = "*"
 lazy_static = "*"
 log = "0.4.6"
